make animations on scroll on happen once. Change button on half and half panels and background image content to be a page link rather than relational, so the link does not keep local host as the url once moved to different environment. Change input text color in signup. Reduce width of pre header icons so they dont have empty space overlapping the link, preventing clicking.

--- a/wp-content/themes/stclair/src/sass/hero-slider.scss
+++ b/wp-content/themes/stclair/src/sass/hero-slider.scss
@@ -17,6 +17,7 @@
             position: absolute;
             display: flex;
             justify-content: space-between;
+            outline: none;
             width: 100%;
             top: 50%;
             transform: translateY(-50%);
@@ -146,20 +147,6 @@
             width: 100%;
             max-height: none;
         }
-
-        // transition: width ease-in 2s;
-
-        // .tns-slide-active {
-        //     width: 120%;
-
-        //     animation-name: fadeIn;
-        //     animation-duration: 2s;
-
-        //     @keyframes fadeIn {
-        //         from {width: 100%;}
-        //         to {width: 120%;}
-        //     }
-        // }
     }
 
     &__watercolor-wrapper {
